# auth-service

./: .env  Cargo.toml  Config.toml
.circleci/: config.yml
migrations/2022-11-11-162702_create_roles/: up.sql
migrations/2022-11-12-101349_create_users/: up.sql
migrations/2022-11-12-101349_users/: up.sql
migrations/2022-11-12-180036_create_teams/: up.sql
migrations/2022-11-12-204532_create_team_members/: up.sql
migrations/2022-12-16-203834_create_groups/: up.sql
migrations/2022-12-18-162702_create_team_roles/: up.sql
src/: auth.rs  config.rs  lib.rs  main.rs  migration.rs  schema.rs  tests.rs
src/database/: connection.rs  mod.rs  team_members.rs  team_role.rs  teams.rs  users.rs
src/models/: mod.rs  team_members.rs  team_roles.rs  teams.rs  users.rs
src/request/: request.rs  response.rs
src/rest/: mod.rs  request.rs  response.rs  swagger.rs
src/roles/: mod.rs
src/roles/database/: select.rs
src/roles/models/: dto.rs  mod.rs  roles.rs
src/roles/routes/: roles.rs
src/routes/: mod.rs  roles.rs  teams.rs  users.rs
src/security/: auth.rs  jwt.rs  mod.rs  payload.rs
src/team/database/: insert.rs  select.rs
src/team/models/: dto.rs  mod.rs  team.rs  team_member.rs
src/team/routes/: mod.rs  team.rs  team_members.rs
src/users/: mod.rs
src/users/database/: insert.rs  select.rs
src/users/models/: mod.rs  user.rs  user_dto.rs
src/users/routes/: mod.rs  sign_user.rs  user_auth.rs
src/users/service/: create_user.rs  insert_user.rs  mod.rs
src/utils/: db_connection.rs  errors.rs  mod.rs  responders.rs
